concluida a seção 'benefícios' da landing page

--- a/pages/index.html
+++ b/pages/index.html
@@ -72,6 +72,44 @@
 		</div>
 	</main>
 
+	<section id="beneficios">
+		<div class="container py-72">
+			<div class="pb-64">
+				<h2 class="text-center text-blue-1 fw-bold fz-24">Alguns Benefícios da Gamificação</h2>
+			</div>
+			<div class="d-flex gap-32">
+				<div class="card-beneficio">
+					<img src="/dist/img/melhor-aprendizado.png" class="img-fluid" alt="">
+					<div class="card-body">
+						<h5 class="card-title text-center fw-bold fz-16 text-dark-1">Melhor aprendizado</h5>
+						<p class="fz-14 text-dark-3 text-center">Melhora a absorção do conteúdo pelos alunos.</p>
+					</div>
+				</div>
+				<div class="card-beneficio">
+					<img src="/dist/img/engajamento.png" class="img-fluid" alt="">
+					<div class="card-body">
+						<h5 class="card-title text-center fw-bold fz-16 text-dark-1">Engajamento</h5>
+						<p class="fz-14 text-dark-3 text-center">Motiva os estudantes e professores na sala de aula.</p>
+					</div>
+				</div>
+				<div class="card-beneficio">
+					<img src="/dist/img/flexibilidade.png" class="img-fluid" alt="">
+					<div class="card-body">
+						<h5 class="card-title text-center fw-bold fz-16 text-dark-1">Flexbilidade</h5>
+						<p class="fz-14 text-dark-3 text-center">Pode ser conciliada com várias estratégias e ferramentas.</p>
+					</div>
+				</div>
+				<div class="card-beneficio">
+					<img src="/dist/img/autonomia.png" class="img-fluid" alt="">
+					<div class="card-body">
+						<h5 class="card-title text-center fw-bold fz-16 text-dark-1">Autonomia</h5>
+						<p class="fz-14 text-dark-3 text-center">O estudante como protagonista da sua aprendizagem.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script type="module" src="/dist/js/index.js"></script>
 </body>
