finalização parcial da landing page

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,9 +8,9 @@
 	<title>SAGA</title>
 
 	<!--Fonte-->
-	<link rel="preconnect" href="https://fonts.googleapis.com" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Poppins:wght@600&display=swap" rel="stylesheet">
 
 	<!--CSS-->
 	<link rel="stylesheet" href="/dist/css/style.css" />
@@ -20,7 +20,7 @@
 	<header class="" id="menu-inicial">
 		<nav class="navbar navbar-expand-lg bg-blue-1">
 			<div class="container">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand" href="index.html">
 					<img src="/dist/img/logo-light.png" alt="Logo do SAGA">
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -81,34 +81,191 @@
 				<div class="card-beneficio">
 					<img src="/dist/img/melhor-aprendizado.png" class="img-fluid" alt="">
 					<div class="card-body">
-						<h5 class="card-title text-center fw-bold fz-16 text-dark-1">Melhor aprendizado</h5>
+						<h3 class="card-title text-center fw-bold fz-16 text-dark-1">Melhor aprendizado</h3>
 						<p class="fz-14 text-dark-3 text-center">Melhora a absorção do conteúdo pelos alunos.</p>
 					</div>
 				</div>
 				<div class="card-beneficio">
 					<img src="/dist/img/engajamento.png" class="img-fluid" alt="">
 					<div class="card-body">
-						<h5 class="card-title text-center fw-bold fz-16 text-dark-1">Engajamento</h5>
+						<h3 class="card-title text-center fw-bold fz-16 text-dark-1">Engajamento</h3>
 						<p class="fz-14 text-dark-3 text-center">Motiva os estudantes e professores na sala de aula.</p>
 					</div>
 				</div>
 				<div class="card-beneficio">
 					<img src="/dist/img/flexibilidade.png" class="img-fluid" alt="">
 					<div class="card-body">
-						<h5 class="card-title text-center fw-bold fz-16 text-dark-1">Flexbilidade</h5>
+						<h3 class="card-title text-center fw-bold fz-16 text-dark-1">Flexbilidade</h3>
 						<p class="fz-14 text-dark-3 text-center">Pode ser conciliada com várias estratégias e ferramentas.</p>
 					</div>
 				</div>
 				<div class="card-beneficio">
 					<img src="/dist/img/autonomia.png" class="img-fluid" alt="">
 					<div class="card-body">
-						<h5 class="card-title text-center fw-bold fz-16 text-dark-1">Autonomia</h5>
+						<h3 class="card-title text-center fw-bold fz-16 text-dark-1">Autonomia</h3>
 						<p class="fz-14 text-dark-3 text-center">O estudante como protagonista da sua aprendizagem.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<section id="funcionalidades" class="py-64">
+		<div class="container">
+			<div class="pb-64">
+				<h2 class="text-center text-blue-1 fw-bold fz-24">Nossas principais funcionalidades</h2>
+			</div>
+			<div class="row justify-content-center gap-32">
+				<div class="col-10 row align-items-center">
+					<div class="col-7 p-0 d-flex gap-24">
+						<div>
+							<div class="bg-blue-1 text-aqua-2 px-16 py-2 d-inline-block rounded-circle fz-16 fw-extra-bold">
+								1
+							</div>
+						</div>
+						<div>
+							<h3 class="fz-18 text-dark-1 fw-bold">Turmas virtuais</h3>
+							<p class="text-dark-3 fz-16">Nossa plataforma contém turmas virtuais que podem ser gerenciadas pelo professor. É uma ferramenta de ensino complementar colocada à disposição de professores e alunos. Através dessas turmas o docente poderá visualizar os participantes da turma, disponibilizar conteúdos e referências a serem utilizadas pelos estudantes, registrar datas de tarefas que devem ser cumpridas, enquetes, etc.</p>
+						</div>
+					</div>
+					<div class="col-5">
+						<div class="card-imagem"></div>
+					</div>
+				</div>
+				<div class="col-10 row align-items-center">
+					<div class="col-7 p-0 d-flex gap-24">
+						<div>
+							<div class="bg-blue-1 text-aqua-2 px-16 py-2 d-inline-block rounded-circle fz-16 fw-extra-bold">
+								2
+							</div>
+						</div>
+						<div>
+							<h3 class="fz-18 text-dark-1 fw-bold">Atividades Gamificadas</h3>
+							<p class="text-dark-3 fz-16">Visando o melhor aprendizado, engajamento e absorção do conteúdo para os alunos. Nossa ferramenta propôs atividades Gamificadas com o intuito de oferecer uma experiência única e mais dinâmica para ambos e assim conseguir trazer para o ambiente escolar aulas mais atrativas e menos monótonas.</p>
+						</div>
+					</div>
+					<div class="col-5">
+						<div class="card-imagem"></div>
+					</div>
+				</div>
+				<div class="col-10 row align-items-center">
+					<div class="col-7 p-0 d-flex gap-24">
+						<div>
+							<div class="bg-blue-1 text-aqua-2 px-16 py-2 d-inline-block rounded-circle fz-16 fw-extra-bold">
+								3
+							</div>
+						</div>
+						<div>
+							<h3 class="fz-18 text-dark-1 fw-bold">Elementos de Gamificação</h3>
+							<p class="text-dark-3 fz-16">O SAGA é repleto de elementos de Gamificação, pois são através deles que o aprendizado torna-se mais atraente. As metas, regras, sistema de feedback, pontuação, recompensas, personificação, etc. Todas essas são mecânicas de jogos, que, aplicadas da forma correta pode contribuir bastante na educação e na busca por conhecimento.</p>
+						</div>
+					</div>
+					<div class="col-5">
+						<div class="card-imagem"></div>
+					</div>
+				</div>
+				<div class="col-10 row align-items-center">
+					<div class="col-7 p-0 d-flex gap-24">
+						<div>
+							<div class="bg-blue-1 text-aqua-2 px-16 py-2 d-inline-block rounded-circle fz-16 fw-extra-bold">
+								4
+							</div>
+						</div>
+						<div>
+							<h3 class="fz-18 text-dark-1 fw-bold">Lorem Ipsum</h3>
+							<p class="text-dark-3 fz-16">Lorem ipsum, dolor sit amet consectetur adipisicing elit. A quasi sit, quaerat nulla, nemo veritatis officiis temporibus consequuntur velit id perferendis, explicabo repellendus numquam facilis?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, fuga! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, fuga.</p>
+						</div>
+					</div>
+					<div class="col-5">
+						<div class="card-imagem"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="depoimentos"></section>
+
+	<section id="sobre" class="bg-blue-1">
+		<div class="container py-64">
+			<div class="row">
+				<div class="col-6 offset-1 px-0">
+					<h2 class="text-aqua-2 fw-bold fz-24">Sobre Nós</h2>
+					<div class="text-white fz-16 pt-32">
+						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections </p>
+						<p>1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. </p>
+					</div>
+				</div>
+				<div class="col-4 d-flex justify-content-end">
+					<img src="/dist/img/ilustracao-2.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="galeria">
+		<div class="container py-72">
+			<div class="pb-64">
+				<h2 class="text-blue-1 fw-bold fz-24 text-center">Galeria</h2>
+			</div>
+			<div class="d-flex flex-wrap justify-content-center gap-32">
+				<div class="card-galeria"></div>
+				<div class="card-galeria"></div>
+				<div class="card-galeria"></div>
+				<div class="card-galeria"></div>
+				<div class="card-galeria"></div>
+				<div class="card-galeria"></div>
+			</div>
+		</div>
+	</section>
+
+	<section id="contato">
+		<div class="container py-64">
+			<div class="row justify-content-center">
+				<div class="col-10">
+					<h2 class="text-blue-1 fw-bold fz-24">Contato</h2>
+					<form class="row pt-64">
+						<div class="col-6 d-flex flex-column gap-24">
+							<div>
+								<label for="inputNome" class="">Nome</label>
+    						<input type="text" class="form-control" id="inputNome" placeholder="Digite o seu nome">
+							</div>
+							<div>
+								<label for="inputEmail" class="">E-mail</label>
+    						<input type="email" class="form-control" id="inputEmail" placeholder="seuemail@exemplo.com">
+							</div>
+							<div>
+								<label for="inputAssunto" class="">Assunto</label>
+    						<input type="text" class="form-control" id="inputAssunto" placeholder="Escreva o assunto que motivou o contato">
+							</div>
+						</div>
+						<div class="col-6 d-flex flex-column">
+							<div>
+								<label for="inputMensagem">Mensagem</label>
+								<textarea class="form-control" id="inputMensagem" rows="3" placeholder="Escreva a mensagem"></textarea>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<footer class="pt-64 pb-72 bg-blue-1">
+		<div class="container">
+			<a href="index.html">
+				<img src="/dist/img/logo-light.png" alt="logo do saga">
+			</a>
+			<div class="d-flex justify-content-between pt-40">
+				<p class="text-white fw-bold fz-18">Software para Aulas Gamificadas.</p>
+				<a href="https://www.instagram.com/projeto.saga/" class="d-flex gap-2 fw-semi-bold fz-16 text-decoration-none text-white align-items-center ff-poppins" target="__blank">
+					<img src="/dist/img/svg/instagram.svg" width="28px" alt="">
+					@projeto.saga
+				</a>
+			</div>
+		</div>
+	</footer>
 
 	<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script type="module" src="/dist/js/index.js"></script>
