--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&family=Poppins:wght@600&display=swap" rel="stylesheet">
 
 	<!--CSS-->
-	<link rel="stylesheet" href="../node_modules/swiper/swiper-bundle.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
 	<link rel="stylesheet" href="/dist/css/style.css" />
 </head>
 
