montagem da página de login

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -154,7 +154,7 @@
       </div>
       <div class="col-7">
         <div class="logo">
-          <img src="/dist/img/logo-light.png" alt="">
+          <img src="/dist/img/logo-light-2.png" alt="">
         </div>
       </div>
     </div>
