--- a/pages/login.html
+++ b/pages/login.html
@@ -16,9 +16,60 @@
 	<link rel="stylesheet" href="/dist/css/style.css" />
 </head>
 
-<body class="">
+<body class="bg-blue-1">
 
-
+	<main class="container py-72" id="login">
+    <div class="row">
+			<div class="col-7">
+        <div class="logo">
+          <img src="/dist/img/logo-light-2.png" alt="">
+        </div>
+      </div>
+      <div class="col-5">
+        <form>
+          <h1 class="fw-semi-bold fz-24 text-center text-dark-1 mb-16">Bem-vindo de volta!</h1>
+          <span class="fz-12 fw-semi-bold d-block text-center" style="color: #848484;">
+						Faça login utilizando o e-mail e senha cadastrados
+					</span>
+          <div class="d-flex flex-column gap-24 pt-32">
+            <div>
+              <h2><label for="email">E-mail</label> <span class="form__required">*</span></h2>
+              <div class="d-flex flex-column gap-16 pt-lg-8">
+                <div class="d-flex align-items-center gap-16">
+                  <input type="email" name="email" id="email" placeholder="seuemail@exemplo.com">
+                </div>
+              </div>
+            </div>
+            <div>
+              <h2><label for="senha">Senha</label> <span class="form__required">*</span></h2>
+              <div class="d-flex flex-column gap-16 pt-lg-8">
+                <div class="d-flex align-items-center gap-16 position-relative">
+                  <input type="password" name="senha" id="senha" placeholder="Digite uma senha">
+                  <span class="eye open-eye"></span>
+                </div>
+              </div>
+            </div>
+						<div class="d-flex justify-content-between">
+							<div class="d-flex align-items-center gap-8">
+								<input type="checkbox" name="contectado" id="conectado">
+								<label for="conectado" class="fw-extra-bold fz-12">Mantenha-me conectado.</label>
+							</div>
+							<div>
+								<a href="" class="text-decoration-none text-blue-3 fw-extra-bold fz-12">
+									Esqueceu sua senha?
+								</a>
+							</div>
+						</div>
+          </div>
+          <div class="pt-32">
+            <button type="submit" disabled>
+              Entrar
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </main>
 
 	<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script type="module" src="/dist/js/index.js"></script>
