adicionando o texto da seção 'sobre nós' e removendo o 4º item das funcionalidades

--- a/pages/index.html
+++ b/pages/index.html
@@ -165,22 +165,6 @@
 						<div class="card-imagem"></div>
 					</div>
 				</div>
-				<div class="col-10 row align-items-center">
-					<div class="col-7 p-0 d-flex gap-24">
-						<div>
-							<div class="bg-blue-1 text-aqua-2 px-16 py-2 d-inline-block rounded-circle fz-16 fw-extra-bold">
-								4
-							</div>
-						</div>
-						<div>
-							<h3 class="fz-18 text-dark-1 fw-bold">Lorem Ipsum</h3>
-							<p class="text-dark-3 fz-16">Lorem ipsum, dolor sit amet consectetur adipisicing elit. A quasi sit, quaerat nulla, nemo veritatis officiis temporibus consequuntur velit id perferendis, explicabo repellendus numquam facilis?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, fuga! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, fuga.</p>
-						</div>
-					</div>
-					<div class="col-5">
-						<div class="card-imagem"></div>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
@@ -271,8 +255,10 @@
 				<div class="col-6 offset-1 px-0">
 					<h2 class="text-aqua-2 fw-bold fz-24">Sobre Nós</h2>
 					<div class="text-white fz-16 pt-32">
-						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections </p>
-						<p>1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. </p>
+						<p>
+							O SAGA é um software digital que irá contribuir para a aprendizagem, melhor absorção do conteúdo em sala de aula e proporcionar uma maior interação entre professor e aluno. Ao ser produzido foi utilizado conceitos de gamificação, com o objetivo de proporcionar para ambos uma experiência única e lúdica.
+							Uma ferramenta chave no ensino com turmas virtuais, mecânicas de jogos, atividades, recompensas a cada meta alcançada como: selos, medalhas, troféus, etc. Tudo que vier a acrescentar na busca pelo conhecimento estará disponível em nossa plataforma.  	
+						</p>
 					</div>
 				</div>
 				<div class="col-4 d-flex justify-content-end">
